--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Login.cshtml
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-primary">Log in</button>
+                        <button type="submit" class="create-btn" style="margin-bottom:0.5em;">LOGIN</button>
                     </div>
                     <div class="form-group">
                         <p>
