--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -5,7 +5,6 @@
     ViewData["ActivePage"] = ManageNavPages.Index;
 }
 
-<h4>@ViewData["Title"]</h4>
 <partial name="_StatusMessage" for="StatusMessage" />
 <div class="row centered">
     <div class="col-md-6">
@@ -13,15 +12,15 @@
             <div asp-validation-summary="All" class="text-danger"></div>
             <img src="@Url.Action("ProfilePictures", "Account")" class="profile-pic"/>
             <div class="form-group">
-                <label asp-for="Input.ProfilePicture"></label>
+                <label asp-for="Input.ProfilePicture" class="login-labels"></label>
                 <input class="form-control" name="Input.ProfilePicture" type="file" 
                        accept=".png,.jpg,.jpeg,.gif,.tif"/>
             </div>
-            <div class="form-group">
+            <div class="form-group login-labels">
                 <label asp-for="Username"></label>
                 <input asp-for="Username" class="form-control" disabled />
             </div>
-            <div class="form-group">
+            <div class="form-group login-labels">
                 <label asp-for="Input.Email"></label>
                 @if (Model.IsEmailConfirmed)
                 {
@@ -37,7 +36,7 @@
                 }
                 <span asp-validation-for="Input.Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group login-labels">
                 <div class="form-group">
                     <label asp-for="Input.Name"></label>
                     <input asp-for="Input.Name" class="form-control" />
@@ -57,7 +56,7 @@
                 </div>
 
             </div>
-            <button id="update-profile-button" type="submit" class="btn btn-primary">Save</button>
+            <button id="update-profile-button" type="submit" class="btn btn-primary" style="margin-bottom:0.5em;">Save</button>
         </form>
     </div>
 </div>
