--- a/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/TheMusicExchangeProject/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -2,10 +2,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Manage your account</h1>
-
 <div>
-    <h4>Change your account settings</h4>
+    <header class="search-header">
+        <h3 class="search-title">Manage your account settings</h3>
+    </header>
     <hr />
     <div class="row">
         <div class="col-md-3">
