--- a/TheMusicExchangeProject/Views/Skill/Create.cshtml
+++ b/TheMusicExchangeProject/Views/Skill/Create.cshtml
@@ -6,9 +6,9 @@
 }
 
 <div class="row login-body">
-    <div class="prev-page">
+    <div class="prev-page" style="padding-top:1.5em;">
         <a asp-controller="Skill" asp-action="Index" class="arrow left">
-            <svg width="60px" height="80px" viewBox="0 0 50 80" xml:space="preserve">
+            <svg width="40px" height="60px" viewBox="0 0 50 80" xml:space="preserve">
             <polyline fill="none" stroke="#F18805" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="
 	            45.63,75.8 0.375,38.087 45.63,0.375 " />
             </svg>
