--- a/TheMusicExchangeProject/Views/Skill/Delete.cshtml
+++ b/TheMusicExchangeProject/Views/Skill/Delete.cshtml
@@ -5,36 +5,47 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Delete</h1>
+<div class="table-background">
+    <div class="table-container" style="padding-top:1em;">
+        
+        <div class="panel skills-table" >
+            <div class="prev-page" style="padding-top:1.5em;">
+                <a asp-controller="Skill" asp-action="Index" class="arrow left">
+                    <svg width="40px" height="60px" viewBox="0 0 50 80" xml:space="preserve">
+                    <polyline fill="none" stroke="#F18805" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" points="
+	            45.63,75.8 0.375,38.087 45.63,0.375 " />
 
-<h3>Are you sure you want to delete this?</h3>
+            </svg>
+                </a>
+            </div>
+            <div class="skills-object">
+                <h2 class="skills-name">Are you sure you want to delete this?</h2>
+                <dl class="skills-details">
+                    <dt class="skills-item">
+                        Skill name
+                    </dt>
+                    <dd class="skills-item">
+                        @Html.DisplayFor(model => model.SkillName)
+                    </dd>
+                    <dt class="skills-item">
+                        Description
+                    </dt>
+                    <dd class="skills-item">
+                        @Html.DisplayFor(model => model.Description)
+                    </dd>
+                    <dt class="skills-item">
+                        Level (1:Beginner, 2:Intermediate, 3:Advanced)
+                    </dt>
+                    <dd class="skills-item">
+                        @Html.DisplayFor(model => model.LevelID)
+                    </dd>
+                </dl>
 
-<div>
-    <hr />
-    <dl class="row delete-item">
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.SkillName)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.SkillName)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.LevelID)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.LevelID)
-        </dd>
-    </dl>
-
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="SkillID" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+                <form asp-action="Delete">
+                    <input type="hidden" asp-for="SkillID" />
+                    <input type="submit" value="Delete" class="delete-btn" />
+                </form>
+            </div>
+        </div>    
+    </div>  
 </div>
